operators/cluster-api/cluster-api-operator/01-namespace-capi-operator-system.yml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    io.seedmatic.rke2lab/domain: cluster-api
    io.seedmatic.rke2lab/layer: operators
    io.seedmatic.rke2lab/package: cluster-api-operator
  labels:
    clusterctl.cluster.x-k8s.io/core: capi-operator
    control-plane: controller-manager
  name: capi-operator-system
