operators/cluster-api/cluster-api-operator/01-namespace-caprke2-system.yml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    io.seedmatic.rke2lab/domain: cluster-api
    io.seedmatic.rke2lab/layer: operators
    io.seedmatic.rke2lab/package: cluster-api-operator
  name: caprke2-system
