operators/cluster-api/cluster-api-operator/02-service-capi-operator-webhook-service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    io.seedmatic.rke2lab/domain: cluster-api
    io.seedmatic.rke2lab/layer: operators
    io.seedmatic.rke2lab/package: cluster-api-operator
  labels:
    clusterctl.cluster.x-k8s.io/core: capi-operator
  name: capi-operator-webhook-service
  namespace: capi-operator-system
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    clusterctl.cluster.x-k8s.io/core: capi-operator
    control-plane: controller-manager
